[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synq-steep"
version = "0.1.0"
description = "ETL pipeline to sync Steep analytics data to SYNQ data catalog"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "msgspec>=0.20.0",
    "typer>=0.15.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ty>=0.0.13",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
synq-steep = "synq_steep.cli:app"
